@@ -91,3 +91,5 @@ require_relative 'excel_functions/rank'
 require_relative 'excel_functions/isnumber'
 
 require_relative 'excel_functions/len'
+
+require_relative 'excel_functions/substitute'
